# MAE-animal-reconstruct-and-classification

./: .gitignore  INFERENCE.md  MAE_vs_UNET_DETAILED_COMPARISON.md  QUICK_REFERENCE_CARD.md  README.md  analysis_mae_vs_unet_code_level.py  inference.py  inspect_mae_checkpoints.ipynb  mae_core.py  main.py  pyproject.toml  start_implementation.ipynb  train_mae_only.ipynb
data/: animals10.py
models/: unet.py
training/: classification.py  common.py  evaluation.py  mae_trainer.py  plot_compare_mae_unet.py  plot_loss_curve.py  unet.py
training_logs/: unet_44_epochs.csv
utils/: common.py  visualization.py
web/: README.md
web/frontend/src/: App.tsx  index.css
web_demo/: .gitignore  Makefile  README.md
web_demo/apps/web/: package-lock.json  package.json
web_demo/apps/web/public/samples/: README.md
web_demo/apps/web/src/app/: globals.css  layout.tsx  page.tsx
web_demo/apps/web/src/app/api/model/: route.ts
web_demo/apps/web/src/components/: Header.tsx  InferenceLoader.tsx  MaskStep.tsx  ResultStep.tsx  Stepper.tsx  UploadStep.tsx
web_demo/apps/web/src/lib/: classes.ts  image.ts  samples.ts
web_demo/apps/web/src/types/: index.ts
web_demo/services/inference/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
web_demo/services/inference/src/inference_service/: __init__.py  cli.py  constants.py  loaders.py  main.py  models.py  pipeline.py  schemas.py  utils.py
web_pinwa/backend/: main.py
web_pinwa/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web_pinwa/frontend/src/: index.css
